--- a/setup/static/css/dark-mode.css
+++ b/setup/static/css/dark-mode.css
@@ -1,5 +1,5 @@
 body * {
-    transition: all 0.1s;
+    transition: background 0.1s;
 }
 
 .darkmode-toggle {
